# tnt

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  standardese.config
benchmark/: CMakeLists.txt  run_tnt_benchmarks.cpp
benchmark/benchmarks/math/: add_function_benchmark.cpp
benchmark/include/benchmark/: opencv_utils.hpp
benchmark/src/linear/: matrix_multiply.cpp
benchmark/src/math/: add.cpp  divide.cpp  multiply.cpp
cmake/: 3rdparty.cmake  SimdppMultiarch.cmake  blas.cmake  coverage.cmake  cuda.cmake  docs.cmake  flags.cmake  headers.cmake  sanitize.cmake  version.cmake
include/tnt/: tnt.hpp
include/tnt/core/: .export.hpp.swp  aligned_ptr.hpp  core.hpp  export.hpp  index.hpp  range.hpp  shape.hpp  stride.hpp  tensor.hpp  tensor_view.hpp
include/tnt/core/impl/: aligned_ptr_impl.hpp  index_impl.hpp  range_impl.hpp  shape_impl.hpp  stride_impl.hpp  tensor_impl.hpp  tensor_view_impl.hpp
include/tnt/linear/: Gaussian_elimination.hpp  convolution.hpp  discrete_cosine_transform.hpp  dot.hpp  eigen.hpp  linear.hpp  matrix_multiply.hpp  orthogonal_projection.hpp
include/tnt/linear/impl/: Gaussian_elimination_impl.hpp  convolution_3d_impl.hpp  discrete_cosine_transform_impl.hpp  dot_impl.hpp  eigen_impl.hpp  matrix_multiply_impl.hpp  orthogonal_projection_impl.hpp
include/tnt/math/: add.hpp  arithmetic_ops.hpp  bitwise_and.hpp  bitwise_not.hpp  bitwise_ops.hpp  bitwise_or.hpp  bitwise_xor.hpp  compare_not_equal.hpp  compare_ops.hpp  divide.hpp  math.hpp  multiply.hpp  subtract.hpp
include/tnt/math/impl/: add_impl.hpp  bitwise_and_impl.hpp  bitwise_not_impl.hpp  bitwise_or_impl.hpp  bitwise_xor_impl.hpp  compare_equal_impl.hpp  compare_greater_or_equal_impl.hpp  compare_greater_than_impl.hpp  compare_less_or_equal_impl.hpp  compare_less_than_impl.hpp  compare_not_equal_impl.hpp  divide_impl.hpp  multiply_impl.hpp  subtract_impl.hpp
include/tnt/utils/: errors.hpp  macros.hpp  simd.hpp  testing.hpp  utils.hpp
src/: test.cpp
